Using more recent dependencies

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,4 @@ name: Spigot-Party-API-PAF
 version: ${project.version}
 author: Simonsator
 depend: [FriendsAPIForPartyAndFriends]
+api-version: 1.13
