--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,10 @@
 
 	<groupId>de.simonsator</groupId>
 	<artifactId>Spigot-Party-API-For-RedisBungee</artifactId>
-	<version>1.0-SNAPSHOT</version>
-
+	<version>1.0.1-SNAPSHOT</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<repositories>
 		<repository>
 			<id>ghac Repo</id>
@@ -15,7 +17,7 @@
 		</repository>
 		<repository>
 			<id>simonsators-repo</id>
-			<url>http://simonsator.de/repo/</url>
+			<url>https://simonsator.de/repo/</url>
 		</repository>
 		<repository>
 			<id>spigot-repo</id>
@@ -26,20 +28,20 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.11.2-R0.1-SNAPSHOT</version>
+			<version>1.13.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<!--Bukkit API-->
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.11.2-R0.1-SNAPSHOT</version>
+			<version>1.13.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.simonsator</groupId>
 			<artifactId>Party-and-Friends-MySQL-Edition-Spigot-API</artifactId>
-			<version>1.3.2</version>
+			<version>1.5.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -57,8 +59,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
