--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<repositories>
 		<repository>
 			<id>ghac Repo</id>
-			<url>http://nexus.ghac.de/content/repositories/snapshots/</url>
+			<url>https://nexus.ghac.de/content/repositories/snapshots/</url>
 		</repository>
 		<repository>
 			<id>simonsators-repo</id>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.9.0</version>
+			<version>4.0.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
