--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,14 @@
 		<dependency>
 			<groupId>de.simonsator</groupId>
 			<artifactId>Party-and-Friends-MySQL-Edition-Spigot-API</artifactId>
-			<version>1.5.0</version>
+			<version>1.5.1</version>
 			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>be.maximvdw</groupId>
+					<artifactId>MVdWPlaceholderAPI</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
