--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,6 @@
 			<version>1.13.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
-		<!--Bukkit API-->
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.13.2-R0.1-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>de.simonsator</groupId>
 			<artifactId>Party-and-Friends-MySQL-Edition-Spigot-API</artifactId>
@@ -47,7 +40,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>4.1.0</version>
+			<version>4.3.0-m1</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -57,7 +50,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
+				<version>3.10.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -66,7 +59,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.3</version>
+				<version>3.3.0</version>
 				<configuration>
 					<artifactSet>
 						<includes>
@@ -102,7 +95,7 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>3.5.1</version>
+				<version>3.5.2</version>
 			</extension>
 		</extensions>
 	</build>
