--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-main: de.simonsator.partyandfriends.spigot.api.party.PartyManager
+main: de.simonsator.partyandfriends.spigot.PartyAPIForSpigotPlugin
 name: Spigot-Party-API-PAF
 version: ${project.version}
 author: Simonsator
