Check if table exists

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>de.simonsator</groupId>
 			<artifactId>Party-and-Friends-MySQL-Edition-Spigot-API</artifactId>
-			<version>1.5.3</version>
+			<version>1.5.4-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
