Added link to installation instructions

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,5 @@
-# Either set to redis or mysql
+# Please read the installation instructions: https://github.com/Simonsator/Party-API-For-Spigot/wiki/Installation
+# Either set it to redis or mysql. Please read the installation instructions: https://github.com/Simonsator/Party-API-For-Spigot/wiki/Installation
 PartyDataTransferMethod: 'None'
 Redis:
   Host: 'localhost'
