--- a/spigot-plugin/pom.xml
+++ b/spigot-plugin/pom.xml
@@ -12,10 +12,53 @@
 	<artifactId>spigot-party-api-spigot-plugin</artifactId>
 
 	<properties>
-		<maven.compiler.source>18</maven.compiler.source>
-		<maven.compiler.target>18</maven.compiler.target>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+					<artifactSet>
+						<includes>
+							<include>redis.clients:*</include>
+							<include>de.simonsator</include>
+						</includes>
+					</artifactSet>
+					<relocations>
+						<relocation>
+							<pattern>redis.clients</pattern>
+							<shadedPattern>de.simonsator.partyandfriends.redisclient</shadedPattern>
+						</relocation>
+					</relocations>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
+					<filters>
+						<filter>
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+								<exclude>META-INF/*.MF</exclude>
+							</excludes>
+						</filter>
+					</filters>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
