--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,12 +9,15 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spigot-party-api-for-party-and-friends</artifactId>
+	<properties>
+		<maven.deploy.skip>false</maven.deploy.skip>
+	</properties>
 	<build>
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>3.5.1</version>
+				<version>3.5.2</version>
 			</extension>
 		</extensions>
 	</build>
