--- a/final-build/pom.xml
+++ b/final-build/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>spigot-party-api-parent</artifactId>
 		<groupId>de.simonsator</groupId>
-		<version>1.0.3-SNAPSHOT</version>
+		<version>1.0.4-RELEASE</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spigot-party-api-final-build</artifactId>
@@ -68,7 +68,7 @@
 		<dependency>
 			<groupId>de.simonsator</groupId>
 			<artifactId>spigot-party-api-spigot-plugin</artifactId>
-			<version>1.0.3-SNAPSHOT</version>
+			<version>1.0.4-RELEASE</version>
 		</dependency>
 	</dependencies>
 </project>
