--- a/proxy-common/pom.xml
+++ b/proxy-common/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>spigot-party-api-parent</artifactId>
 		<groupId>de.simonsator</groupId>
-		<version>1.0.3-SNAPSHOT</version>
+		<version>1.0.4-RELEASE</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spigot-party-api-proxy-common</artifactId>
