--- a/test/pom.xml
+++ b/test/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>de.simonsator</groupId>
 			<artifactId>Party-and-Friends-MySQL-Edition-Spigot-API</artifactId>
-			<version>1.5.4-SNAPSHOT</version>
+			<version>1.5.4-RELEASE</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
