--- a/bungeecord-mysql/pom.xml
+++ b/bungeecord-mysql/pom.xml
@@ -10,7 +10,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>spigot-party-api-bungeecord-mysql</artifactId>
-
+	<properties>
+		<maven.deploy.skip>true</maven.deploy.skip>
+	</properties>
 	<repositories>
 		<repository>
 			<id>bungeecord-repo</id>
