--- a/final-build/pom.xml
+++ b/final-build/pom.xml
@@ -9,6 +9,9 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spigot-party-api-final-build</artifactId>
+	<properties>
+		<maven.deploy.skip>true</maven.deploy.skip>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
