--- a/proxy-common/pom.xml
+++ b/proxy-common/pom.xml
@@ -9,4 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spigot-party-api-proxy-common</artifactId>
+	<properties>
+		<maven.deploy.skip>true</maven.deploy.skip>
+	</properties>
 </project>
