--- a/velocity-mysql/pom.xml
+++ b/velocity-mysql/pom.xml
@@ -9,6 +9,9 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spigot-party-api-velocity-mysql</artifactId>
+	<properties>
+		<maven.deploy.skip>true</maven.deploy.skip>
+	</properties>
 	<repositories>
 		<repository>
 			<id>papermc</id>
