--- a/spigot-plugin/pom.xml
+++ b/spigot-plugin/pom.xml
@@ -17,7 +17,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.3.0</version>
+				<version>3.4.1</version>
 				<configuration>
 					<artifactSet>
 						<includes>
@@ -89,6 +89,11 @@
 			<version>4.2.3</version>
 			<type>jar</type>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>23.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
