--- a/api/src/main/resources/plugin.yml
+++ b/api/src/main/resources/plugin.yml
@@ -3,4 +3,5 @@ name: Spigot-Party-API-PAF
 version: ${project.version}
 author: Simonsator
 depend: [FriendsAPIForPartyAndFriends]
+softdepend: [PartyAndFriendsGUI]
 api-version: 1.13
