--- a/api/src/main/resources/plugin.yml
+++ b/api/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 main: de.simonsator.partyandfriends.spigot.PartyAPIForSpigotPlugin
 name: Spigot-Party-API-PAF
 version: ${project.version}
-author: Simonsator
+author: Simonsator, J.T.
 depend: [FriendsAPIForPartyAndFriends]
 softdepend: [PartyAndFriendsGUI]
 api-version: 1.13
