--- a/spigot-plugin/pom.xml
+++ b/spigot-plugin/pom.xml
@@ -94,6 +94,7 @@
 			<groupId>de.simonsator</groupId>
 			<artifactId>DevelopmentPAFSpigot</artifactId>
 			<version>1.0.239</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
