--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
 	<packaging>pom</packaging>
 	<version>1.0.7-RELEASE</version>
 	<properties>
-		<maven.compiler.source>8</maven.compiler.source>
-		<maven.compiler.target>8</maven.compiler.target>
+		<maven.compiler.release>8</maven.compiler.release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.deploy.skip>false</maven.deploy.skip>
 	</properties>
